package de.whs.wi;

public interface ICounterModel {
    int getCount();
    void increment();
    void reset();
}
