package de.whs.wi;

public interface ICounterPresenter {
    void onIncrement();
    void onReset();
}
